tests/snapshots/execution_spec__execution_spec__test-http-headers.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  foo: String
}

schema {
  query: Query
}
