tests/snapshots/execution_spec__execution_spec__test-http-tmpl.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Post {
  id: Int
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
