tests/snapshots/execution_spec__execution_spec__test-inline-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B {
  c: String
}

type Query {
  foo: B
}

schema {
  query: Query
}
