tests/snapshots/execution_spec__execution_spec__test-interface-result.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA {
  a: String
  b: String
}

interface IA {
  a: String
}

type Query {
  bar: IA
}

schema {
  query: Query
}
