tests/snapshots/execution_spec__execution_spec__test-interface.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA {
  a: String
  b: String
}

interface IA {
  a: String
}

type Query {
  bar: B
}

schema {
  query: Query
}
