tests/snapshots/execution_spec__execution_spec__test-modify.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
input Foo {
  bar: String
}

type Query {
  data(input: Foo): String
}

schema {
  query: Query
}
