tests/snapshots/execution_spec__execution_spec__test-multi-interface.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA & IB {
  a: String
  b: String
}

interface IA {
  a: String
}

interface IB {
  b: String
}

type Query {
  bar: B
}

schema {
  query: Query
}
