tests/snapshots/execution_spec__execution_spec__test-nested-input.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
input A {
  b: B
}

input B {
  c: C
}

input C {
  d: D
}

input D {
  e: Int
}

type Query {
  a(a: A!): X
}

type X {
  a: String
}

schema {
  query: Query
}
