tests/snapshots/execution_spec__execution_spec__test-query-documentation.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  """
  This is test
  """
  foo: String
}

schema {
  query: Query
}
