tests/snapshots/execution_spec__execution_spec__test-upstream.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  hello: String
}

schema {
  query: Query
}
