tests/snapshots/execution_spec__execution_spec__undeclared-type.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Undeclared type 'User' was found",
    "trace": [
      "Query",
      "users"
    ],
    "description": null
  }
]
